# wri-NuevoLeon

./: README.md  biblio.bib  index.docx  index.html  index.qmd  pyproject.toml  vivienda.qmd
data/001_raw/APF/: consumos2022-2024APF.xlsx
data/001_raw/encevi_2018_base_de_datos_csv/: cal_agua.csv  cambio.csv  pantalla.csv  ventilador.csv
data/002_intermediate/: apf_long.parquet  porcentajes_aa.parquet  porcentajes_naa.parquet  vivienda_con_aa.parquet  vivienda_energia_m2_estrato_clima.parquet  vivienda_sin_aa.parquet
notebooks_edificios/: 001_EDA_APF.ipynb  004_NuevoLeon.ipynb  climas.py
notebooks_edificios/.ipynb_checkpoints/: 001_EDA_APF-checkpoint.ipynb  003_Analisis_aa-checkpoint.ipynb  004_NuevoLeon-checkpoint.ipynb
notebooks_vivienda/: 000_AnálisisEstadísticoPerdidas.ipynb  002_Separa_conAA_SinAA.ipynb  003a_Analisis_SIN_aa_conteo.ipynb  004a_Analisis_SIN_aa.ipynb  005a_Sonora_SIN_aa.ipynb  005b_Sonora_CON_aa.ipynb  006b_NuevoLeon_CON_aa.ipynb
notebooks_vivienda/.ipynb_checkpoints/: 000_AnálisisEstadísticoPerdidas-checkpoint.ipynb  001_SeleccionNuevoLeon_Conteo-checkpoint.ipynb  002_Separa_conAA_SinAA-checkpoint.ipynb  003a_Analisis_SIN_aa_conteo-checkpoint.ipynb  004b_Analisis_CON_aa-checkpoint.ipynb  005a_Sonora_SIN_aa-checkpoint.ipynb  005b_Sonora_CON_aa-checkpoint.ipynb  006a_NuevoLeon_SIN_aa-checkpoint.ipynb  006b_NuevoLeon_CON_aa-checkpoint.ipynb  999_004b_Analisis_CON_aa-checkpoint.ipynb  999_APF-checkpoint.ipynb
notebooks_vivienda/estadistica/.ipynb_checkpoints/: calculos-checkpoint.py
