[project]
name = "wri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastparquet>=2024.11.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "python-slugify>=8.0.4",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]
